<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Current Openings"
        android:gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:padding="5dp"
    android:background="@drawable/spinner_back">

    <Spinner
        android:id="@+id/careerspinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAlignment="gravity"
        android:spinnerMode="dropdown"
        android:backgroundTint="@color/greenblue"
        android:prompt="@string/career_spinner_title"
        android:layout_margin="2dp">
    </Spinner>
</RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/yellow"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginBottom="15dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">
        <LinearLayout
            android:id="@+id/linearone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PHP Developer"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:background="@drawable/panelgradient"
                android:layout_marginEnd="10dp"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/php_desc"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:background="@color/yellow"
                android:textAlignment="inherit"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="5dp">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp">
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Job Skills :"
                                style="@style/Base.TextAppearance.AppCompat.Title"
                                android:textColor="@color/greenblue"/>
                            <TextView
                                android:layout_width="270dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:inputType="textMultiLine"
                                android:paddingEnd="5dp"
                                android:text="Experience in Web &amp; Product development."/>
                        </TableRow>
                        <TableRow android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Experience :"
                                style="@style/Base.TextAppearance.AppCompat.Title"
                                android:textColor="@color/royal2"
                                android:layout_gravity="center"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="1 to 3 years"/>
                        </TableRow>

                    </TableLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Candidate Profile :"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:textSize="15sp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/greenblue"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_it_one"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_it_two"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile__it_three"
                        android:layout_marginStart="25dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_it_four"
                        android:layout_marginStart="25dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_it_five"
                        android:layout_marginStart="25dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Salary :"
                            android:fontFamily="monospace"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="@color/yellow"
                            android:layout_marginStart="15dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="Negotiable."
                            android:paddingBottom="2dp"
                            android:textColor="@color/black"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="monospace"
                        android:textStyle="bold"
                        android:text="Mail your Resume at hr@techkshetrainfo.com"/>
                </LinearLayout>

        </LinearLayout>
    </ScrollView>
        <LinearLayout
            android:id="@+id/lineartwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MBA in Marketing"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:background="@drawable/panelgradient"
                android:layout_marginEnd="10dp"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mba_desc"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:background="@color/yellow"
                android:textAlignment="inherit"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Job Skills :"
                        android:textColor="@color/greenblue"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Fresher or Experience. " />
                </TableRow>
                <TableRow android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Experience :"
                        android:textColor="@color/royal2"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="0 to 2 years"/>
                </TableRow>

            </TableLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Candidate Profile :"
                android:textColor="@color/greenblue"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_mb_one"
                android:textAlignment="inherit"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_mb_two"
                android:layout_marginStart="25dp"
                android:textAlignment="inherit"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile__it_three"
                android:layout_marginStart="25dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_it_four"
                android:layout_marginStart="25dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Salary :"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginStart="15dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Negotiable."/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/royal4"
                android:text="Mail your Resume at hr@techkshetrainfo.com"/>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>